route rails to new ember app successfully

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     {{content-for "body"}}
-
+    <H1>Hello From Ember!</H1>
     <script src="{{rootURL}}assets/vendor.js"></script>
     <script src="{{rootURL}}assets/frontend.js"></script>
 
